[project]
name = "blog-to-tweet-agent"
version = "1.0.0"
description = "A simple agent that takes in a blog post URL and generates a tweets thread for it."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "firecrawl-py>=4.3.6",
    "langchain>=1.0.0a10",
    "langchain-anthropic>=1.0.0a2",
    "langchain-community>=0.3.30",
    "langchain-core>=1.0.0a5",
    "langgraph>=1.0.0a4",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.2",
]
