[project]
name = "weather-agent"
version = "0.1.0"
description = "A LangGraph-powered agent that fetches weather information for a given location."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.0a10",
    "langchain-anthropic>=1.0.0a2",
    "langchain-core>=1.0.0a5",
    "langgraph>=1.0.0a4",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.2",
]
